03-gitops/apps/demo/otel-demo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otel-demo
  labels:
#    istio-injection: enabled
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
