03-gitops/apps/demo/otel-demo/base/accounting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: accounting
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: accounting
    app.kubernetes.io/name: accounting
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:

      opentelemetry.io/name: accounting
  template:
    metadata:
      labels:

        opentelemetry.io/name: accounting
        app.kubernetes.io/instance: otel-demo
        app.kubernetes.io/component: accounting
        app.kubernetes.io/name: accounting
    spec:
      serviceAccountName: otel-demo
      containers:
        - name: accounting
          image: 'ghcr.io/open-telemetry/demo:2.0.2-accounting'
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 120Mi
          volumeMounts:
      volumes:
