03-gitops/apps/demo/otel-demo/base/fraud-detection.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-detection
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: fraud-detection
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: fraud-detection
    app.kubernetes.io/name: fraud-detection
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:

      opentelemetry.io/name: fraud-detection
  template:
    metadata:
      labels:

        opentelemetry.io/name: fraud-detection
        app.kubernetes.io/instance: otel-demo
        app.kubernetes.io/component: fraud-detection
        app.kubernetes.io/name: fraud-detection
    spec:
      serviceAccountName: otel-demo
      containers:
        - name: fraud-detection
          image: 'ghcr.io/open-telemetry/demo:2.0.2-fraud-detection'
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 300Mi
          volumeMounts:
      volumes:
