03-gitops/apps/demo/otel-demo/base/frontend-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-proxy
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: frontend-proxy
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: frontend-proxy
    app.kubernetes.io/name: frontend-proxy
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: tcp-service
      targetPort: 8080
  selector:

    opentelemetry.io/name: frontend-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-proxy
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: frontend-proxy
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: frontend-proxy
    app.kubernetes.io/name: frontend-proxy
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:

      opentelemetry.io/name: frontend-proxy
  template:
    metadata:
      labels:

        opentelemetry.io/name: frontend-proxy
        app.kubernetes.io/instance: otel-demo
        app.kubernetes.io/component: frontend-proxy
        app.kubernetes.io/name: frontend-proxy
    spec:
      serviceAccountName: otel-demo
      containers:
        - name: frontend-proxy
          image: 'ghcr.io/open-telemetry/demo:2.0.2-frontend-proxy'
          imagePullPolicy: IfNotPresent
          ports:

            - containerPort: 8080
              name: service
          resources:
            limits:
              memory: 65Mi
          securityContext:
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
          volumeMounts:
      volumes:
