03-gitops/apps/demo/otel-demo/base/image-provider.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-provider
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: image-provider
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: image-provider
    app.kubernetes.io/name: image-provider
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8081
      name: tcp-service
      targetPort: 8081
  selector:

    opentelemetry.io/name: image-provider
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-provider
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: image-provider
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: image-provider
    app.kubernetes.io/name: image-provider
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:

      opentelemetry.io/name: image-provider
  template:
    metadata:
      labels:

        opentelemetry.io/name: image-provider
        app.kubernetes.io/instance: otel-demo
        app.kubernetes.io/component: image-provider
        app.kubernetes.io/name: image-provider
    spec:
      serviceAccountName: otel-demo
      containers:
        - name: image-provider
          image: 'ghcr.io/open-telemetry/demo:2.0.2-image-provider'
          imagePullPolicy: IfNotPresent
          ports:

            - containerPort: 8081
              name: service
          resources:
            limits:
              memory: 50Mi
          volumeMounts:
      volumes:
