03-gitops/apps/demo/otel-demo/base/load-generator.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-generator
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: load-generator
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: load-generator
    app.kubernetes.io/name: load-generator
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8089
      name: tcp-service
      targetPort: 8089
  selector:

    opentelemetry.io/name: load-generator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: load-generator
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: load-generator
    app.kubernetes.io/name: load-generator
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:

      opentelemetry.io/name: load-generator
  template:
    metadata:
      labels:

        opentelemetry.io/name: load-generator
        app.kubernetes.io/instance: otel-demo
        app.kubernetes.io/component: load-generator
        app.kubernetes.io/name: load-generator
    spec:
      serviceAccountName: otel-demo
      containers:
        - name: load-generator
          image: 'ghcr.io/open-telemetry/demo:2.0.2-load-generator'
          imagePullPolicy: IfNotPresent
          ports:

            - containerPort: 8089
              name: service
          resources:
            limits:
              memory: 1500Mi
          volumeMounts:
      volumes:
