03-gitops/apps/demo/otel-demo/base/product-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: product-catalog
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: product-catalog
    app.kubernetes.io/name: product-catalog
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: tcp-service
      targetPort: 8080
  selector:

    opentelemetry.io/name: product-catalog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: product-catalog
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: product-catalog
    app.kubernetes.io/name: product-catalog
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:

      opentelemetry.io/name: product-catalog
  template:
    metadata:
      labels:

        opentelemetry.io/name: product-catalog
        app.kubernetes.io/instance: otel-demo
        app.kubernetes.io/component: product-catalog
        app.kubernetes.io/name: product-catalog
    spec:
      serviceAccountName: otel-demo
      containers:
        - name: product-catalog
          image: 'ghcr.io/open-telemetry/demo:2.0.2-product-catalog'
          imagePullPolicy: IfNotPresent
          ports:

            - containerPort: 8080
              name: service
          resources:
            limits:
              memory: 20Mi
          volumeMounts:
            - name: product-catalog-products
              mountPath: /usr/src/app/products
      volumes:
        - name: product-catalog-products
          configMap:
            name: product-catalog-products
