03-gitops/apps/demo/otel-demo/base/valkey-cart.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey-cart
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: valkey-cart
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: valkey-cart
    app.kubernetes.io/name: valkey-cart
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 6379
      name: valkey-cart
      targetPort: 6379
  selector:

    opentelemetry.io/name: valkey-cart
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey-cart
  labels:
    helm.sh/chart: opentelemetry-demo-0.37.1

    opentelemetry.io/name: valkey-cart
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/component: valkey-cart
    app.kubernetes.io/name: valkey-cart
    app.kubernetes.io/version: "2.0.2"
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:

      opentelemetry.io/name: valkey-cart
  template:
    metadata:
      labels:

        opentelemetry.io/name: valkey-cart
        app.kubernetes.io/instance: otel-demo
        app.kubernetes.io/component: valkey-cart
        app.kubernetes.io/name: valkey-cart
    spec:
      serviceAccountName: otel-demo
      containers:
        - name: valkey-cart
          image: 'valkey/valkey:7.2-alpine'
          imagePullPolicy: IfNotPresent
          ports:

            - containerPort: 6379
              name: valkey-cart
          resources:
            limits:
              memory: 20Mi
          securityContext:
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
      volumes:
